--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #EEF3F8;
+}
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
@@ -28,4 +31,19 @@
   left: 22vw;
   height: 100%;
   margin: 70px 1vw 0 1vw;
+}
+
+
+@media only screen and (max-width: 800px) {
+    .left_column, .right_column {
+        display: none;
+      }
+      .middle_column{
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        height: 100%;
+        margin: 70px 5vw 0 5vw;
+      }
 }
