--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -38,12 +38,19 @@
 .search_button {
   flex: 3;
   width: 40vw;
-  height: 20px;
+  height: 26px;
+  background-color: white;
+  border:0;
+  text-align: start;
+  color: #4966e9 ;
+  cursor: pointer;
 }
 .sitename {
   flex: 3;
   padding-left: 2vw;
   text-decoration: none;
+  font-size: x-large;
+  font-weight: 800;
 }
 
 .special {
