--- a/css/profile.css
+++ b/css/profile.css
@@ -44,7 +44,6 @@
   flex-direction: row;
   padding-left: 1vw;
   padding-bottom: 6px;
-
 }
 .icon a {
   color: #fff;
@@ -54,8 +53,8 @@
   line-height: 2vw;
   text-align: center;
   border-radius: 30px;
-  background-color: #045de9;
-  background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);}
+  background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+}
 
 .icon h4 {
   flex: 5;
@@ -66,7 +65,6 @@
   margin-bottom: 0.2em;
   text-align: start;
   padding-left: 30px;
-
 }
 
 .icon p {
