--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-body{
-    background-color: #EEF3F8;
-    font-family: 'Roboto', sans-serif;
+body {
+  background-color: #eef3f8;
+  font-family: "Roboto", sans-serif;
 }
 .wrapper {
   display: grid;
@@ -28,23 +28,23 @@ body{
 .middle_column {
   position: absolute;
   top: 0;
-  right: 22vw;
+  right: 21vw;
   left: 21vw;
   height: 100%;
   margin: 70px 1vw 0 1vw;
 }
 
-
 @media only screen and (max-width: 800px) {
-    .left_column, .right_column {
-        display: none;
-      }
-      .middle_column{
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        height: 100%;
-        margin: 70px 5vw 0 5vw;
-      }
+  .left_column,
+  .right_column {
+    display: none;
+  }
+  .middle_column {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 100%;
+    margin: 70px 5vw 0 5vw;
+  }
 }
