--- a/css/people-u-may-know.css
+++ b/css/people-u-may-know.css
@@ -1,29 +1,34 @@
 .heading {
-  font-weight: 800;
-  font-size: larger;
+  font-weight: 700;
+  font-size: 1.1vw;
   padding-bottom: 20px;
+  color: #1fa2ff;
+  text-align: center;
 }
 
 .ppl {
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-bottom: 15px;
 }
 
 .ppl h3 {
   flex: 2;
-  font-size: large;
+  font-size: 1vw;
   font-weight: 600;
   text-align: center;
 }
 
 .ppl a {
+  flex: 1;
   color: #49b3e9;
   text-align: middle;
   font-size: large;
 }
 
 .ppl-img {
+  margin-left: 2vw;
   width: 3.5vw;
   height: 3.5vw;
   display: flex;
