--- a/css/modal.css
+++ b/css/modal.css
@@ -1,7 +1,7 @@
-.modal {
+.search-modal {
   visibility: hidden;
   opacity: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -13,12 +13,12 @@
   transition: all 0.4s;
 }
 
-.modal:target {
+.search-modal:target {
   visibility: visible;
   opacity: 1;
 }
 
-.modal__content {
+.search-modal__content {
   border-radius: 4px;
   position: relative;
   width: 500px;
@@ -27,19 +27,7 @@
   padding: 1em 2em;
 }
 
-.modal__footer {
-  text-align: right;
-}
-.modal__footer a {
-  text-align: right;
-  color: #585858;
-}
-.modal__footer a i {
-  text-align: right;
-  color: #d02d2c;
-}
-
-.modal__close {
+.search-modal__close {
   position: absolute;
   top: 10px;
   right: 10px;
