--- a/views/home.html
+++ b/views/home.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/nav-bar.css" />
-    <link rel="stylesheet" href="css/profile.css" />
-    <link rel="stylesheet" href="css/people-u-may-know.css" />
-    <link rel="stylesheet" href="css/status-box.css" />
-    <link rel="stylesheet" href="css/post-box.css" />
-    <link rel="stylesheet" href="css/modals/search-modal.css" />
-    <link rel="stylesheet" href="css/modals/friends-modal.css" />
-    <link rel="stylesheet" href="css/modals/blocked-modal.css">
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/nav-bar.css" />
+    <link rel="stylesheet" href="../css/profile.css" />
+    <link rel="stylesheet" href="../css/people-u-may-know.css" />
+    <link rel="stylesheet" href="../css/status-box.css" />
+    <link rel="stylesheet" href="../css/post-box.css" />
+    <link rel="stylesheet" href="../css/modals/search-modal.css" />
+    <link rel="stylesheet" href="../css/modals/friends-modal.css" />
+    <link rel="stylesheet" href="../css/modals/blocked-modal.css">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
