--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/post-box.css" />
     <link rel="stylesheet" href="../css/modals/search-modal.css" />
     <link rel="stylesheet" href="../css/modals/friends-modal.css" />
-    <link rel="stylesheet" href="../css/modals/blocked-modal.css">
+    <link rel="stylesheet" href="../css/modals/blocked-modal.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
@@ -47,7 +47,9 @@
             <a href=" "><i class="fas fa-user-circle"></i> Me</a>
           </li>
           <li>
-            <a href=" "><i class="fas fa-sign-out-alt"></i> Logout</a>
+            <a
+              ><i class="fas fa-sign-out-alt" id="logout"></i> Logout</a
+            >
           </li>
         </ul>
       </div>
@@ -346,7 +348,7 @@
             class="ppl-img"
           />
           <h3>Beverly Little</h3>
-          
+
           <button class="block">block <i class="fas fa-ban"></i></button>
         </div>
 
@@ -357,7 +359,7 @@
             class="ppl-img"
           />
           <h3>Beverly Little</h3>
-          
+
           <button class="blocked">block <i class="fas fa-ban"></i></button>
         </div>
 
@@ -368,11 +370,12 @@
             class="ppl-img"
           />
           <h3>Beverly Little</h3>
-          
+
           <button class="block">block <i class="fas fa-ban"></i></button>
         </div>
       </div>
     </div>
     <!-- end of my block list modal -->
+    <script src="../scripts/script-home.js"></script>
   </body>
 </html>
