--- a/views/home.html
+++ b/views/home.html
@@ -66,7 +66,7 @@
               class="thumbnail"
             />
 
-            <h3 class="name">Beverly Little</h3>
+            <h3 class="name" id="username">Beverly Little</h3>
             <p class="email">example@gmail.com</p>
           </div>
 
