added my posts modal

--- a/views/home.html
+++ b/views/home.html
@@ -376,6 +376,40 @@
       </div>
     </div>
     <!-- end of my block list modal -->
+
+    <!-- my posts modal -->
+    <div id="myPosts-modal" class="my-posts-modal">
+      <div class="my-posts-modal__content">
+        <div>
+          <h1>My posts List</h1>
+          <hr />
+          <a href="#" class="my-posts-modal__close"
+            ><i class="fas fa-times-circle"></i
+          ></a>
+        </div>
+
+        <!-- a post -->
+        <div class="post-container">
+          <div class="post">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="post-img"
+            />
+            <h3>Beverly Little</h3>
+            <p>12/10/2021</p>
+          </div>
+          <p class="post-box">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          </p>
+          <hr />
+          <button class="update">update</button>
+          <button class="delete">delete</button>
+        </div>
+        
+      </div>
+    </div>
+
     <script src="../scripts/script-home.js"></script>
   </body>
 </html>
