link css for my posts modal

--- a/views/home.html
+++ b/views/home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/modals/search-modal.css" />
     <link rel="stylesheet" href="../css/modals/friends-modal.css" />
     <link rel="stylesheet" href="../css/modals/blocked-modal.css" />
+    <link rel="stylesheet" href="../css/modals/my-posts-modal.css">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
