fixed link css for my posts modal

--- a/views/home.html
+++ b/views/home.html
@@ -45,7 +45,7 @@
             <a href="#frnd-modal"><i class="fas fa-users"></i> Friends</a>
           </li>
           <li>
-            <a href=" "><i class="fas fa-user-circle"></i> Me</a>
+            <a href="#myPosts-modal"><i class="fas fa-user-circle"></i> My Posts</a>
           </li>
           <li>
             <a
