displaying logged in user email

--- a/views/home.html
+++ b/views/home.html
@@ -18,7 +18,6 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
     />
-    <script src="js/script.js"></script>
     <title>Pocket World</title>
   </head>
   <body>
@@ -68,7 +67,7 @@
             />
 
             <h3 class="name" id="username">Beverly Little</h3>
-            <p class="email">example@gmail.com</p>
+            <p class="email" id="user-email">example@gmail.com</p>
           </div>
 
           <div class="social-icons">
