--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/modals/search-modal.css" />
     <link rel="stylesheet" href="../css/modals/friends-modal.css" />
     <link rel="stylesheet" href="../css/modals/blocked-modal.css" />
-    <link rel="stylesheet" href="../css/modals/my-posts-modal.css">
+    <link rel="stylesheet" href="../css/modals/my-posts-modal.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
@@ -44,12 +44,12 @@
             <a href="#frnd-modal"><i class="fas fa-users"></i> Friends</a>
           </li>
           <li>
-            <a href="#myPosts-modal"><i class="fas fa-user-circle"></i> My Posts</a>
+            <a href="#myPosts-modal"
+              ><i class="fas fa-user-circle"></i> My Posts</a
+            >
           </li>
           <li>
-            <a
-              ><i class="fas fa-sign-out-alt" id="logout"></i> Logout</a
-            >
+            <a><i class="fas fa-sign-out-alt" id="logout"></i> Logout</a>
           </li>
         </ul>
       </div>
@@ -110,11 +110,12 @@
             <h3>Beverly Little</h3>
             <p>12/10/2021</p>
           </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
+          <p class="post-box">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+          </p>
           <hr />
           <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
           ><span>25</span>
@@ -132,11 +133,10 @@
             <h3>Beverly Little</h3>
             <p>12/10/2021</p>
           </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
+          <p class="post-box">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
           <hr />
           <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
           ><span>25</span>
@@ -154,11 +154,12 @@
             <h3>Beverly Little</h3>
             <p>12/10/2021</p>
           </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
+          <p class="post-box">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+          </p>
           <hr />
           <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
           ><span>25</span>
@@ -176,11 +177,15 @@
             <h3>Beverly Little</h3>
             <p>12/10/2021</p>
           </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
+          <p class="post-box">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
           <hr />
           <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
           ><span>25</span>
@@ -400,13 +405,12 @@
           </div>
           <p class="post-box">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
           <hr />
           <button class="update">update</button>
           <button class="delete">delete</button>
         </div>
-        
       </div>
     </div>
 
