fetch posts on front end

--- a/views/home.html
+++ b/views/home.html
@@ -96,8 +96,9 @@
             class="status-box"
             rows="2"
             placeholder="What's on your mind?"
+            id="post-text"
           ></textarea>
-          <button class="post-button">Post</button>
+          <button class="post-button" id="post-button">Post</button>
         </div>
 
         <!-- a post  -->
