--- a/views/home.html
+++ b/views/home.html
@@ -100,95 +100,11 @@
           ></textarea>
           <button class="post-button" id="post-button">Post</button>
         </div>
+        <div id="post1">
 
-        <!-- a post  -->
-        <div class="post-container">
-          <div class="post">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="post-img"
-            />
-            <h3>Beverly Little</h3>
-            <p>12/10/2021</p>
-          </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
-          <hr />
-          <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
-          ><span>25</span>
-          <a class="dislike" href=""><i class="fas fa-thumbs-down"></i></a
-          ><span>15</span>
         </div>
 
-        <!-- a post  -->
-        <div class="post-container">
-          <div class="post">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="post-img"
-            />
-            <h3>Beverly Little</h3>
-            <p>12/10/2021</p>
-          </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
-          <hr />
-          <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
-          ><span>25</span>
-          <a class="dislike" href=""><i class="fas fa-thumbs-down"></i></a
-          ><span>15</span>
-        </div>
-
-        <!-- a post  -->
-        <div class="post-container">
-          <div class="post">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="post-img"
-            />
-            <h3>Beverly Little</h3>
-            <p>12/10/2021</p>
-          </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
-          <hr />
-          <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
-          ><span>25</span>
-          <a class="dislike" href=""><i class="fas fa-thumbs-down"></i></a
-          ><span>15</span>
-        </div>
-
-        <!-- a post  -->
-        <div class="post-container">
-          <div class="post">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="post-img"
-            />
-            <h3>Beverly Little</h3>
-            <p>12/10/2021</p>
-          </div>
-          <textarea
-            class="post-box"
-            rows="5"
-            placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident"
-          ></textarea>
-          <hr />
-          <a class="like" href=""><i class="fas fa-thumbs-up"></i></a
-          ><span>25</span>
-          <a class="dislike" href=""><i class="fas fa-thumbs-down"></i></a
-          ><span>15</span>
-        </div>
-      </div>
+        
       <!--end of middle section : post feed -->
 
       <!-- right side bar :  People you may know-->
