display number of friends

--- a/views/home.html
+++ b/views/home.html
@@ -74,12 +74,12 @@
             <div class="icon">
               <a href="#frnd-modal"><i class="fas fa-users"></i></a>
               <h4>Friends</h4>
-              <p>12.8k</p>
+              <p id="friend-count">12.8k</p>
             </div>
 
             <div class="icon">
               <a href="#blocked-modal"><i class="fas fa-ban"></i></a>
-              <h4>Blocked</h4>
+              <h4 id="blocked-count">Blocked</h4>
               <p>320</p>
             </div>
           </div>
