--- a/views/home.html
+++ b/views/home.html
@@ -79,8 +79,8 @@
 
             <div class="icon">
               <a href="#blocked-modal"><i class="fas fa-ban"></i></a>
-              <h4 id="blocked-count">Blocked</h4>
-              <p>320</p>
+              <h4>Blocked</h4>
+              <p id="blocked-count">320</p>
             </div>
           </div>
         </div>
