--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,7 @@
     <!-- my navbar -->
     <nav class="fixed-nav-bar">
       <div id="menu" class="menu">
-        <a class="sitename" href="index.html">Pocket World</a>
+        <a class="sitename">Pocket World</a>
         <a class="show" href="#menu">Menu</a>
         <a class="hide" href="#hidemenu">Menu</a>
         <a href="">
