--- a/css/modals/friends-modal.css
+++ b/css/modals/friends-modal.css
@@ -19,6 +19,7 @@
 }
 
 .friends-modal__content {
+  padding-top: 100px !important;
   border-radius: 4px;
   position: relative;
   width: 500px;
@@ -32,16 +33,19 @@
 
 .friends-modal__close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 25px;
+  right: 0px;
   color: #585858;
   text-decoration: none;
 }
+#frnd-modal > div > div.myfriends-header > h1{
+  padding-left: 10px;
+}
 #frnd-modal > div > div > h3 {
-  font-size: 18px !important;
+  font-size: large;
+  font-weight: 600;
   text-align: start;
   padding-left: 20px;
-  font-weight: 400;
 }
 
 #frnd-modal > div > div > img {
@@ -133,6 +137,13 @@
   font-size: x-large;
 }
 
+.myfriends-header{
+  position: fixed;
+  margin-top: -100px;
+  margin-left: -10px;
+  background-color: white;
+  width: 500px;
+}
 
 @media only screen and (max-width: 800px) {
     #frnd-modal > div > div > h3{
@@ -147,7 +158,5 @@
       .unfriend , .block,.blocked{
           font-size: 10px;
       }
-      #frnd-modal > div > div:nth-child(1) > a > i {
-        font-size: large;
-      }
+      
   }
