--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -37,11 +37,11 @@
 }
 .search_button {
   text-decoration: none;
-  flex: 3;
+  flex: 2;
   text-align: start;
   cursor: pointer;
   letter-spacing: 2px;
-  padding-left: 12px;
+  padding-left: 70px;
   font-weight: 700;
   margin: 0 !important;
 }
@@ -53,11 +53,16 @@
   height: 25px;
 }
 .sitename {
-  flex: 3;
+  flex: 1.5;
   padding-left: 2vw;
   text-decoration: none;
   font-size: x-large;
   font-weight: 800;
+  cursor: pointer;
+}
+
+.sitename span{
+  color: #2058cf;
 }
 
 .special {
