--- a/css/post-box.css
+++ b/css/post-box.css
@@ -3,7 +3,7 @@
   background-color: white;
   transition: background 0.6s ease;
   border-radius: 10px;
-  padding: 20px 35px 20px 35px;
+  padding: 30px 35px;
 }
 
 .post-box {
@@ -14,6 +14,7 @@
   resize: none;
   margin-bottom: 20px;
   font-size: large;
+  font-family: "Roboto", sans-serif;
 }
 
 .post {
