--- a/css/status-box.css
+++ b/css/status-box.css
@@ -11,13 +11,14 @@
 .status-title {
   margin-top: 0;
  color: #1fa2ff;
+ font-size: 1.1vw;
 }
 
 .status-container {
   background-color: white;
   transition: background 0.6s ease;
   border-radius: 10px;
-  padding: 20px 20px 45px 20px;
+  padding: 45px 35px;
 }
 
 .post-button {
