--- a/css/modals/search-modal.css
+++ b/css/modals/search-modal.css
@@ -19,6 +19,7 @@
 }
 
 .search-modal__content {
+  padding-top: 130px !important;
   border-radius: 4px;
   position: relative;
   width: 500px;
@@ -32,24 +33,36 @@
 
 .search-modal__close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 25px;
+  right: 0px;
   color: #585858;
   text-decoration: none;
 }
-#srch-modal > div > div > h3{
-  font-size: 18px !important;
-  text-align: start;
-  padding-left: 20px;
-  font-weight: 400;
+
+.search-header {
+  position: fixed;
+  margin-top: -130px;
+  background-color: white;
+  width: 510px;
 }
 
-#srch-modal > div > div > img{
+#srch-modal > div > div > h3 {
+  font-size: large;
+  font-weight: 600;
+  text-align: start;
+  padding-left: 20px;
+}
+
+#srch-modal > div > div > img {
   width: 70px;
   height: 70px;
 }
 
-.add{
+#srch-modal > div > div:nth-child(1) > a > i {
+  font-size: x-large;
+}
+
+.add {
   text-decoration: none;
   border: 0;
 
@@ -70,16 +83,42 @@
   border-radius: 10px;
   display: block;
 }
+.search-button {
+  text-decoration: none;
+  border: 0;
 
-.added{
+  background-image: linear-gradient(
+    to right,
+    #a2abb3 0%,
+    #acbabd 51%,
+    #a2abb3 100%
+  );
+
+  padding: 8px 12px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  margin-left: 30px;
+}
+
+.fa-search {
+  line-height: 0 !important;
+  margin-top: 0px !important;
+  width: 20px;
+  height: 0px !important;
+}
+
+.added {
   visibility: hidden;
   padding: 0;
-
 }
-.added::after{
+.added::after {
   margin-top: -15px;
-  cursor: not-allowed;
-  pointer-events: none;
+  cursor: pointer;
   visibility: visible;
   text-decoration: none;
   border: 0;
@@ -89,7 +128,6 @@
     #41e664 0%,
     #39db46 51%,
     #23ff52 100%
-  
   );
 
   padding: 8px 12px;
@@ -100,25 +138,36 @@
   box-shadow: 0 0 20px #eee;
   border-radius: 10px;
   display: block;
-
 }
 
-.add:hover {
+.add:hover ,.search-button:hover{
   background-position: right center;
   cursor: pointer;
   color: #fff;
 }
 
+.search-box {
+  /* flex: 1; */
+  width: 350px;
+  height: 25px;
+  padding-left: 10px;
+  font-size: large;
+  border: 0;
+  background-color: #e6f1fc;
+  border-radius: 4px;
+}
+
+
 
 @media only screen and (max-width: 800px) {
-  #srch-modal > div > div > h3{
+  #srch-modal > div > div > h3 {
     font-size: 15px !important;
-
   }
-  #frnd-modal > div > div:nth-child(1) > a > i {
-    font-size: large;
+  #srch-modal > div > div:nth-child(1) > a > i {
+    font-size: x-large;
   }
-  .add , .added{
+  .add,
+  .added {
     font-size: 10px;
-}
+  }
 }
