--- a/views/home.html
+++ b/views/home.html
@@ -42,9 +42,6 @@
             <a href="#srch-modal"><i class="fas fa-search"></i> Search</a>
           </li>
           <li>
-            <a href="#frnd-modal"><i class="fas fa-users"></i> Friends</a>
-          </li>
-          <li>
             <a href="#myRequests-modal"><i class="fas fa-bell"></i> Requests</a>
           </li>
           <li>
@@ -154,8 +151,11 @@
       <!-- search modal -->
       <div id="srch-modal" class="search-modal">
         <div class="search-modal__content">
-          <div>
+          <div class="search-header">
             <h2>Search for potintial Friends</h2>
+
+            <input class="search-box" type="text" placeholder="search...">
+            <button class="search-button"><i class="fas fa-search"></i>Search</button>
             <hr />
             <a href="#" class="search-modal__close"
               ><i class="fas fa-times-circle"></i
@@ -366,7 +366,6 @@
           </button>
           <button class="ignore">ignore <i class="fas fa-ban"></i></button>
         </div>
-
       </div>
     </div>
     <!-- end of requests -->
