--- a/views/home.html
+++ b/views/home.html
@@ -50,7 +50,7 @@
             >
           </li>
           <li>
-            <a><i class="fas fa-sign-out-alt" id="logout"></i> Logout</a>
+            <a id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
           </li>
         </ul>
       </div>
@@ -66,6 +66,11 @@
               src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
               class="thumbnail"
             />
+            
+            <!-- <form id="myForm">
+              <input type="file" id="inpFile"><br>
+              <button type="submit"> UPLOAD</button>
+            </form> -->
 
             <h3 class="name" id="username">Beverly Little</h3>
             <p class="email" id="user-email">example@gmail.com</p>
