--- a/views/home.html
+++ b/views/home.html
@@ -66,7 +66,7 @@
               src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
               class="thumbnail"
             />
-            
+
             <!-- <form id="myForm">
               <input type="file" id="inpFile"><br>
               <button type="submit"> UPLOAD</button>
@@ -159,12 +159,14 @@
           <div class="search-header">
             <h2>Search for potintial Friends</h2>
 
-            <input class="search-box" type="text" placeholder="search...">
-            <button class="search-button"><i class="fas fa-search"></i>Search</button>
+            <input class="search-box" type="text" placeholder="search..." />
+            <button class="search-button">
+              <i class="fas fa-search"></i>Search
+            </button>
             <hr />
-            <a href="#" class="search-modal__close"
-              ><i class="fas fa-times-circle"></i
-            ></a>
+            <a href="#" class="search-modal__close">
+              <i class="fas fa-times-circle"></i>
+            </a>
           </div>
 
           <!-- a user -->
@@ -207,17 +209,15 @@
         <div class="friends-modal__content">
           <div class="myfriends-header">
             <h1>My Friends List</h1>
-            <hr />
+            <hr/>
             <a href="#" class="friends-modal__close"
               ><i class="fas fa-times-circle"></i
             ></a>
           </div>
-          
+
           <div id="friends"></div>
-
-
-          <!-- a user -->
-          
+        </div>
+      </div>
       <!-- end of my friends list modal -->
 
       <!-- my block list modal -->
