--- a/views/home.html
+++ b/views/home.html
@@ -230,39 +230,8 @@
               ><i class="fas fa-times-circle"></i
             ></a>
           </div>
-
-          <!-- a user -->
-          <div class="ppl">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="ppl-img"
-            />
-            <h3>Beverly Little</h3>
-
-            <button class="block">block <i class="fas fa-ban"></i></button>
-          </div>
-
-          <!-- a user -->
-          <div class="ppl">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="ppl-img"
-            />
-            <h3>Beverly Little</h3>
-
-            <button class="blocked">block <i class="fas fa-ban"></i></button>
-          </div>
-
-          <!-- a user -->
-          <div class="ppl">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="ppl-img"
-            />
-            <h3>Beverly Little</h3>
-
-            <button class="block">block <i class="fas fa-ban"></i></button>
-          </div>
+          <div id="blocked-users"></div>
+ 
         </div>
       </div>
       <!-- end of my block list modal -->
