--- a/views/home.html
+++ b/views/home.html
@@ -248,24 +248,8 @@
           </div>
 
           <!-- a post -->
-          <div class="post-container">
-            <div class="post">
-              <img
-                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-                class="post-img"
-              />
-              <h3>Beverly Little</h3>
-              <p>12/10/2021</p>
-            </div>
-            <textarea class="post-box" rows="3">
- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </textarea
-            >
-
-            <button class="update">update</button>
-            <button class="delete">delete</button>
-          </div>
-          <hr />
+         <div id="myPosts">
+         </div>
         </div>
       </div>
     </div>
