accept decline request feature

--- a/views/home.html
+++ b/views/home.html
@@ -266,29 +266,7 @@
         </div>
 
         <!-- a requests -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-          <button class="accept">
-            accept <i class="fas fa-check-circle"></i>
-          </button>
-          <button class="ignore">ignore <i class="fas fa-ban"></i></button>
-        </div>
-
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-          <button class="accept">
-            accept <i class="fas fa-check-circle"></i>
-          </button>
-          <button class="ignore">ignore <i class="fas fa-ban"></i></button>
-        </div>
+        <div id="friend-request"></div>
       </div>
     </div>
     <!-- end of requests -->
