people you may know feature

--- a/views/home.html
+++ b/views/home.html
@@ -114,38 +114,7 @@
         <div class="right_column">
           <div class="container">
             <div class="heading">People you may know</div>
-            <div class="ppl">
-              <img
-                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-                class="ppl-img"
-              />
-              <h3>Beverly Little</h3>
-              <a href=""><i class="fas fa-plus-circle"></i></a>
-            </div>
-            <div class="ppl">
-              <img
-                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-                class="ppl-img"
-              />
-              <h3>Beverly Little</h3>
-              <a href=""><i class="fas fa-plus-circle"></i></a>
-            </div>
-            <div class="ppl">
-              <img
-                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-                class="ppl-img"
-              />
-              <h3>Beverly Little</h3>
-              <a href=""><i class="fas fa-plus-circle"></i></a>
-            </div>
-            <div class="ppl">
-              <img
-                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-                class="ppl-img"
-              />
-              <h3>Beverly Little</h3>
-              <a href=""><i class="fas fa-plus-circle"></i></a>
-            </div>
+            <div id="random-container"></div>
           </div>
         </div>
       </div>
