--- a/css/modals/Requests-modal.css
+++ b/css/modals/Requests-modal.css
@@ -120,13 +120,13 @@
   }
   
   @media only screen and (max-width: 800px) {
-      #myRequests-modal > div > div > h3{
-        font-size: 15px !important;
+      #myRequests-modal-modal > div > div > h3{
+        font-size: large !important;
     
       }
       #myRequests-modal > div > div > img {
-          width: 50px;
-          height: 50px;
+          width: 100px;
+          height: 100px;
         }
   
         .accept , .ignore{
