--- a/views/home.html
+++ b/views/home.html
@@ -41,6 +41,9 @@
           <li class="special">
             <a href="#srch-modal"><i class="fas fa-search"></i> Search</a>
           </li>
+          <li class="special">
+            <a href="#frnd-modal"><i class="fas fa-users"></i> Friends</a>
+          </li>
           <li>
             <a href="#myRequests-modal"><i class="fas fa-bell"></i> Requests</a>
           </li>
