resrt hard coded values

--- a/views/home.html
+++ b/views/home.html
@@ -83,13 +83,13 @@
             <div class="icon">
               <a href="#frnd-modal"><i class="fas fa-users"></i></a>
               <h4>Friends</h4>
-              <p id="friend-count">12.8k</p>
+              <p id="friend-count">0</p>
             </div>
 
             <div class="icon">
               <a href="#blocked-modal"><i class="fas fa-ban"></i></a>
               <h4>Blocked</h4>
-              <p id="blocked-count">320</p>
+              <p id="blocked-count">0</p>
             </div>
           </div>
         </div>
