--- a/views/home.html
+++ b/views/home.html
@@ -66,7 +66,7 @@
         <div class="container">
           <div class="profile">
             <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              src="https://st.depositphotos.com/1779253/5140/v/380/depositphotos_51405259-stock-illustration-male-avatar-profile-picture-use.jpg?forcejpeg=true"
               class="thumbnail"
             />
 
