--- a/css/modals/Requests-modal.css
+++ b/css/modals/Requests-modal.css
@@ -38,17 +38,17 @@
     color: #585858;
     text-decoration: none;
   }
-  #myRequests-modal-modal > div > div.my-requests-header > h1{
+  #myRequests-modal > div > div.my-requests-header > h1{
     padding-left: 20px;
   }
-  #myRequests-modal-modal > div > div > h3 {
+  #myRequests-modal > div > div > h3 {
     font-size: large;
     font-weight: 600;
     text-align: start;
     padding-left: 20px;
   }
   
-  #myRequests-modal-modal > div > div > img {
+  #myRequests-modal > div > div > img {
     width: 70px;
     height: 70px;
   }
@@ -120,7 +120,7 @@
   }
   
   @media only screen and (max-width: 800px) {
-      #myRequests-modal-modal > div > div > h3{
+      #myRequests-modal > div > div > h3{
         font-size: large !important;
     
       }
@@ -134,3 +134,35 @@
         }
         
     }
+
+    @media only screen and (max-width: 450px) {
+      #myRequests-modal > div > div.my-requests-header > h1{
+
+        background-color: white;
+        width: 300px !important;
+        font-size: x-large;
+        padding-left: 0;
+      }
+      #friend-request > div > img {
+        width: 50px ;
+        height: 50px ;
+        margin-left: -10px;
+      }
+      #friend-request > div > h3 {
+        font-size: small !important;
+        padding-left: 10px;
+      }
+      #myRequests-modal > div > div.my-requests-header{
+        width: 350px;
+      }
+      .my-requests-header{
+
+        margin-top: -100px;
+
+        background-color: white;
+        width: 500px;
+      }
+      #friend-request{
+        margin-top: -20px;
+      }
+  }
