--- a/css/modals/friends-modal.css
+++ b/css/modals/friends-modal.css
@@ -157,13 +157,15 @@
   }
 
   @media only screen and (max-width: 450px) {
+    #frnd-modal > div{
+      width: 310px;
+    }
       .myfriends-header{
         position: fixed;
         margin-top: -100px;
         margin-left: -10px;
         background-color: white;
-        width: 350px !important;
-        font-size: small;
+        width: 320px !important;
       }
       #friends > div > img {
         width: 50px ;
@@ -172,6 +174,6 @@
       }
       #friends > div > h3 {
         font-size: medium;
-        padding-left: 10px;
+        padding-left: 7px;
       }
   }
