--- a/css/modals/search-modal.css
+++ b/css/modals/search-modal.css
@@ -187,22 +187,23 @@
   #searched-people{
     margin-top: 20px;
   }
+  #srch-modal > div > div.search-header > h2{
+    font-size: x-large;
+  }
   #searched-people > div > img, #post-container > div > img{
     width: 50px;
     height: 50px;
   }
   #searched-people > div > h3{
     font-size: 13px;
+    padding-left: 7px;
   }
-  #post-container > div > p{
+  #searched-people > div > p{
     font-size: 10px;
     position: absolute;
     right: 25px;
     margin-top: -35px;
   }
-  #post-container > div > h3{
-    font-size: 14px;
-    padding-left: 10px;
-  }
+
   
 }
