--- a/views/home.html
+++ b/views/home.html
@@ -44,6 +44,9 @@
           <li class="special">
             <a href="#frnd-modal"><i class="fas fa-users"></i> Friends</a>
           </li>
+          <li class="special">
+            <a href="#blocked-modal"><i class="fas fa-ban"></i> Blocked</a>
+          </li>
           <li>
             <a href="#myRequests-modal"><i class="fas fa-bell"></i> Requests</a>
           </li>
