--- a/css/modals/Requests-modal.css
+++ b/css/modals/Requests-modal.css
@@ -1,168 +1,163 @@
 .my-requests-modal {
-    visibility: hidden;
-    opacity: 0;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(77, 77, 77, 0.7);
-    transition: all 0.4s;
-  }
-  
-  .my-requests-modal:target {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .my-requests-modal__content {
-    padding-top: 100px !important;
-    border-radius: 4px;
-    position: relative;
-    width: 500px;
-    max-width: 90%;
-    background: #fff;
-    padding: 1em 2em;
-    max-height: 50vh;
-    overflow: hidden;
-    overflow-y: auto;
-  }
-  
-  .my-requests-modal__close {
-    position: absolute;
-    top: 25px;
-    right: 0px;
-    color: #585858;
-    text-decoration: none;
-  }
-  #myRequests-modal > div > div.my-requests-header > h1{
-    padding-left: 20px;
-  }
-  #myRequests-modal > div > div > h3 {
-    font-size: large;
-    font-weight: 600;
-    text-align: start;
-    padding-left: 20px;
-  }
-  
-  #myRequests-modal > div > div > img {
-    width: 70px;
-    height: 70px;
-  }
-  
-  .ignore {
-    text-decoration: none;
-    border: 0;
-    cursor: pointer;
-    background-image: linear-gradient(
-      to right,
-      #ff1f1f 0%,
-      #ff6868 51%,
-      #ff1717 100%
-    );
-  
-    padding: 8px 12px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: white;
-    box-shadow: 0 0 20px rgb(223, 223, 223);
-    border-radius: 10px;
-    display: block;
-    margin-left: 10px;
-  }
-  
-  .accept {
-    text-decoration: none;
-    border: 0;
-    cursor: pointer;
-    background-image: linear-gradient(
-      to right,
-      #1fa2ff 0%,
-      #12d8fa 51%,
-      #1fa2ff 100%
-    );
-  
-    padding: 8px 12px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: white;
-    box-shadow: 0 0 20px rgb(223, 223, 223);
-    border-radius: 10px;
-    display: block;
-  }
-  
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(77, 77, 77, 0.7);
+  transition: all 0.4s;
+}
 
-  
-  .accept:hover , .ignore:hover  {
-    background-position: right center;
-    cursor: pointer;
-    color: #fff;
+.my-requests-modal:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.my-requests-modal__content {
+  padding-top: 100px !important;
+  border-radius: 4px;
+  position: relative;
+  width: 500px;
+  max-width: 90%;
+  background: #fff;
+  padding: 1em 2em;
+  max-height: 50vh;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.my-requests-modal__close {
+  position: absolute;
+  top: 25px;
+  right: 0px;
+  color: #585858;
+  text-decoration: none;
+}
+#myRequests-modal > div > div.my-requests-header > h1 {
+  padding-left: 20px;
+}
+#myRequests-modal > div > div > h3 {
+  font-size: large;
+  font-weight: 600;
+  text-align: start;
+  padding-left: 20px;
+}
+
+#myRequests-modal > div > div > img {
+  width: 70px;
+  height: 70px;
+}
+
+.ignore {
+  text-decoration: none;
+  border: 0;
+  cursor: pointer;
+  background-image: linear-gradient(
+    to right,
+    #ff1f1f 0%,
+    #ff6868 51%,
+    #ff1717 100%
+  );
+
+  padding: 8px 12px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px rgb(223, 223, 223);
+  border-radius: 10px;
+  display: block;
+  margin-left: 10px;
+}
+
+.accept {
+  text-decoration: none;
+  border: 0;
+  cursor: pointer;
+  background-image: linear-gradient(
+    to right,
+    #1fa2ff 0%,
+    #12d8fa 51%,
+    #1fa2ff 100%
+  );
+
+  padding: 8px 12px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px rgb(223, 223, 223);
+  border-radius: 10px;
+  display: block;
+}
+
+.accept:hover,
+.ignore:hover {
+  background-position: right center;
+  cursor: pointer;
+  color: #fff;
+}
+
+#myRequests-modal > div > div:nth-child(1) > a > i {
+  font-size: x-large;
+}
+
+.my-requests-header {
+  position: fixed;
+  margin-top: -100px;
+  margin-left: -10px;
+  background-color: white;
+  width: 500px;
+}
+
+@media only screen and (max-width: 800px) {
+  #myRequests-modal > div > div > h3 {
+    font-size: large !important;
   }
-  
-  
-  #myRequests-modal > div > div:nth-child(1) > a > i {
+  #myRequests-modal > div > div > img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .accept,
+  .ignore {
+    font-size: 10px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  #myRequests-modal > div > div.my-requests-header > h1 {
+    background-color: white;
+    width: 300px !important;
     font-size: x-large;
+    padding-left: 0;
   }
-  
-  .my-requests-header{
-    position: fixed;
-    margin-top: -100px;
+  #friend-request > div > img {
+    width: 50px;
+    height: 50px;
     margin-left: -10px;
+  }
+  #friend-request > div > h3 {
+    font-size: small !important;
+    padding-left: 10px;
+  }
+  #myRequests-modal > div > div.my-requests-header {
+    width: 350px;
+  }
+  .my-requests-header {
+    margin-top: -100px;
+
     background-color: white;
     width: 500px;
   }
-  
-  @media only screen and (max-width: 800px) {
-      #myRequests-modal > div > div > h3{
-        font-size: large !important;
-    
-      }
-      #myRequests-modal > div > div > img {
-          width: 100px;
-          height: 100px;
-        }
-  
-        .accept , .ignore{
-            font-size: 10px;
-        }
-        
-    }
-
-    @media only screen and (max-width: 450px) {
-      #myRequests-modal > div > div.my-requests-header > h1{
-
-        background-color: white;
-        width: 300px !important;
-        font-size: x-large;
-        padding-left: 0;
-      }
-      #friend-request > div > img {
-        width: 50px ;
-        height: 50px ;
-        margin-left: -10px;
-      }
-      #friend-request > div > h3 {
-        font-size: small !important;
-        padding-left: 10px;
-      }
-      #myRequests-modal > div > div.my-requests-header{
-        width: 350px;
-      }
-      .my-requests-header{
-
-        margin-top: -100px;
-
-        background-color: white;
-        width: 500px;
-      }
-      #friend-request{
-        margin-top: -20px;
-      }
+  #friend-request {
+    margin-top: -20px;
   }
+}
