--- a/views/home.html
+++ b/views/home.html
@@ -134,7 +134,12 @@
           <div class="search-header">
             <h2>Search for potential Friends</h2>
 
-            <input class="search-box" type="text" id="search-key" placeholder="search..." />
+            <input
+              class="search-box"
+              type="text"
+              id="search-key"
+              placeholder="search..."
+            />
             <button class="search-button" id="searchBtn">
               <i class="fas fa-search"></i>Search
             </button>
@@ -145,7 +150,6 @@
           </div>
 
           <div id="searched-people"></div>
-       
         </div>
       </div>
       <!-- end of search modal -->
@@ -155,7 +159,7 @@
         <div class="friends-modal__content">
           <div class="myfriends-header">
             <h1>My Friends List</h1>
-            <hr/>
+            <hr />
             <a href="#" class="friends-modal__close"
               ><i class="fas fa-times-circle"></i
             ></a>
@@ -177,7 +181,6 @@
             ></a>
           </div>
           <div id="blocked-users"></div>
- 
         </div>
       </div>
       <!-- end of my block list modal -->
@@ -194,8 +197,7 @@
           </div>
 
           <!-- a post -->
-         <div id="myPosts">
-         </div>
+          <div id="myPosts"></div>
         </div>
       </div>
     </div>
